  * Added the lsl.misc.ionosphere module to help with computing the dispersion and rotation measure of the ionosphere
  * Added a new script, getIonosphericRM.py, that uses the lsl.misc.ionosphere module to estimate the rotation measure during an observation
  * Added a new VDIF reader
  * Improved the speed of the 4-bit TBW, TBN, and DRX reads through look-up tables

1.0.3
  * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
  * Added fallbacks to lsl.misc.geodesy to use a backup EOP server if the primary is unreachable
  * Fixed a bug in imageIDI.py that caused it to crash if a FITS image is not saved
  * Added a new module, lsl.misc.rfutil, to help with understanding commercial antenna properties
  * Moved the calculateSEFD() function out of lsl.sim.vis and into lsl.misc.rfutil
  * Changed the meaning of the 'ForceGaussian' keyword in lsl.sim.vis.buildSimArray to contain the Gaussian full widths at half maximum in degrees
  * Added Boltzmann's constant to lsl.common.constants
  * Added a 'color' keyword to the various functions in lsl.imaging.overlay to change the color of the overlay
  * Added a 'marker' keyword to the lsl.imaging.overlay.source() to change symbol of the source overlay
  * Added a function to lsl.statistics.robust to help estimate the mode of a data set using the half-sample method
  * Fixed the __all__ declaration in the lsl.writer.sdfits module
  * Fixed a bug in the lsl.common.progress.ProgressBarPlus class that caused the time estimates not to get updated when using __iadd__
  * Fixed a bug in the splitSession.py script that caused it to die on truncated data files (Ticket #60)
  * Fixed a bug in imageIDI.py that assumed that 'xx' was always present in the data
  * Fixed a bug in the lsl.reader.ldp.DRXFile class that caused the tuning frequencies to be reported wrong by getInfo()
  * Changed how the lsl.reader.ldp.*.readFrame() functions interact with the time tag checker