@@ -17,6 +17,8 @@
   * Added a new script, getIonosphericRM.py, that uses the lsl.misc.ionosphere module to estimate the rotation measure during an observation
   * Added a new VDIF reader
   * Improved the speed of the 4-bit TBW, TBN, and DRX reads through look-up tables
+  * Improved support for UVFITS files written by AIPS
+  * Added multiple integration selection to the various readers in lsl.imaging.utils
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
